deployment.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: appgrupo1
spec:
  selector:
    matchLabels:
      app: appgrupo1
  replicas: 2 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: appgrupo1
    spec:
      containers:
      - name: app
        image: rodrigozunigab/my-java-grupo1:latest   
        resources:
          limits:
            cpu: 100m
            memory: 200M
          requests:
            cpu:  50m
            memory: 100M    
        ports:
          - containerPort: 8081 
        volumeMounts:
          - mountPath: "$(PATH_MOUNTH)"
            name: volumen-data                        
        readinessProbe:
          tcpSocket:
            port: 8081
          initialDelaySeconds: 120
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8081
          initialDelaySeconds: 120
          periodSeconds: 20
      - name: mariadb
        image: docker.io/mariadb:10.4        
        ports:
          - containerPort: 3306
            protocol: TCP
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: mariadb-volume-1   
      volumes:
          - name: volumen-data
            emptyDir: {}
          - name: mariadb-volume-1
            emptyDir: {}
