service.yml
apiVersion: v1
kind: Service
metadata:
  name: appgrupo1-service
spec:
  selector:
    app: appgrupo1
  ports:
    - name: http
      port: 80
      targetPort: 8081
#  type: NodePort
