ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grupo1-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /rest
            backend:
              service:
                name: appgrupo1-service
                port: 
                  number: 80
